# sell-helper

./: .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  readme.md  requirements.txt
app/: config.py  data.py  dependencies.py  logger.py  main.py  providers.py  setup.py
app/api/: __init__.py  auth.py  dependencies.py  errors_handler.py  login.py  marketplace_auth.py  middlewares.py  oauth_callback.py  product.py  registration.py  search.py  selling.py  settings.py
app/domain/: dto.py
app/infrastructure/: access_token_storage.py  adapter.py  category_predictor.py  factory.py  jwt_auth.py  marketplace_api.py  marketplace_aspects.py  oauth.py  providers.py  search.py
app/repository/: base.py  models.py  providers.py  refresh_tokens.py  user.py
app/services/: auth.py  common.py  mapping.py  marketplace_oauth.py  providers.py  search.py  selling.py
app/utils/: recognition.py  utils.py
assets/: db.sql
back/: Dockerfile  alembic.ini
back/app/: logger.py  providers.py
config/: config-example.yaml
config/example/: ebay.yaml  example_ebay.yaml  search.yaml
front/: .dockerignore  Dockerfile
front/mock-api/: package.json  server.js
front/web-ui/: package-lock.json  package.json
shared/: barcode.py
shared/ebay_api/: auth.py  base_client.py  commerce.py  errors.py  taxonomy.py
src/: config.py  data.py  logger.py  main.py  providers.py  setup.py
src/api/: auth.py  dependencies.py  middleware.py  middlewares.py  search.py  selling.py
src/utils/: recognition.py  utils.py
tests/unit/: test_auth_service.py  test_ebay_api.py  test_ebay_strategy.py  test_ebay_utils.py  test_infrastructure_access_token.py  test_infrastructure_adapter.py  test_infrastructure_ebay_api.py  test_infrastructure_oauth.py  (+11 more)
(+120 files in other folders)
